--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,9 +162,12 @@ html, body {
     font-weight: bold;
     margin-top: 66px;
 }
+.container .sub-container{
+    position: relative;
+}
 
 .container .sub-container .box {
-    width: 20%;
+    width: 80%!important;
     height: 236px;
     float: left;
     margin-left: 73px;
@@ -172,7 +175,11 @@ html, body {
 }
 
 .container .sub-container .box img {
-    width: 100%
+    width: 100%;
+    height: 176px;
+}
+.box.slide{
+    display: flex;
 }
 
 .container .sub-container2 {
@@ -231,4 +238,13 @@ html, body {
 .slide-image {
     width: 100%;
     height: 870px;
+}
+.item-details {
+    margin: 0 25%;
+}
+.price-tag {
+    margin: 0 31px;
+}
+.item-name a {
+    text-decoration: none;
 }
