--- a/public/css/slick.css
+++ b/public/css/slick.css
@@ -6,11 +6,14 @@
     overflow: hidden;
     margin: 0 180px;
     position: absolute;
-    height: 350px;
+    height: 400px;
 }
 ul.slick-dots {
     display: flex;
-    margin: 21px 49%;
+    margin: 21px 40%;
+    list-style: none;
+    transform: translate(43%);
+    transform: translateY(150%);
 }
 button.slick-prev.slick-arrow {
     display: none!important;
@@ -18,6 +21,33 @@ button.slick-prev.slick-arrow {
 button.slick-next.slick-arrow {
     display: none!important;
 }
-/*button#slick-slide-control02,button#slick-slide-control01,button#slick-slide-control00,button#slick-slide-control06,button#slick-slide-control05,button#slick-slide-control04 {
+/*.slick-dots li img:nth-child(1) {
+    display: block;
+}
+
+.slick-dots li img:nth-child(2) {
     display: none;
+}
+
+.slick-dots li.slick-active img:nth-child(1) {
+    display: none;
+}
+
+.slick-dots li.slick-active img:nth-child(2) {
+    display: block;
 }*/
+.slick-dots li.slick-active button{
+    background-color: #c4a265;
+    border-radius: 10px;
+    border: solid #c4a265;
+}
+.slick-dots li button {
+    text-indent: -9999px;
+    overflow:hidden;
+    margin: 0 12px;
+    font-size: 0.6rem;
+    border-radius: .6rem;
+    border: 0;
+    background-color:#cdb68e;
+    /* more CSS */
+}
