--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,9 @@ html, body {
 	font-family: Lucida Console;
 	padding: none;
 }
-
+a {
+    text-decoration: none;
+}
 .headmenu {
 	border: 1px solid black;
 	padding: 24px;
@@ -187,7 +189,7 @@ html, body {
     margin-top: 27%;
     background-color: #f6f4f2;
     overflow: auto;
-    padding: 10px;
+    padding: 0 10px 109px;
 }
 
 .container .sub-container2 .sc2 {
@@ -197,13 +199,9 @@ html, body {
 }
 
 .container .sub-container2 .box2 {
-    /*border: 1px solid black;*/
-    /*padding: 50px;*/
-    width: 24%;
+    width: 100%;
     height: 268px;
     float: left;
-    margin-top: 50px;
-    margin-left: 128px;
 }
 
 .container .sub-container2 .box2 img {
@@ -214,18 +212,24 @@ html, body {
 .container .sub-container2 .box3 {
     /*border: 1px solid black;*/
     background-color: white;
-    width: 24%;
+    width: 100%;
     height: auto;
-    float: left;
+    /*float: left;*/
     /*margin-top: 50px;*/
-    margin-left: 128px;
+    /*margin-left: 128px;*/
 }
 
 .container .sub-container2 .box3 span {
     font-size: 20px;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
 }
-
+.items-container {
+    display: flex;
+}
+.__item {
+    width: 467px;
+    margin: 77px;
+}
 
 
 /* Slider */
@@ -240,11 +244,39 @@ html, body {
     height: 870px;
 }
 .item-details {
-    margin: 0 25%;
+    margin: 12px 0;
+    text-align: center;
 }
 .price-tag {
-    margin: 0 31px;
+    margin: 18px 0;
 }
 .item-name a {
     text-decoration: none;
+    text-align: center;
+}
+.prices {
+    font-family: "Blatant", sans-serif;
+    color: #C4A265;
+    font-weight: normal;
+    font-size: 21px;
+    line-height: 21px;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+span.product-name:hover {
+    color: #C4A265;
+}
+span.product-name {
+    font-weight: normal;
+    font-size: 21px;
+    line-height: 1;
+    letter-spacing: 0.01em;
+    color: #1D1E21;
+    text-align: center;
+    font-family: "Blatant", sans-serif;
+}
+.footer-section {
+    background-color: #4b3d37;
+    height: 500px;
+    padding: 1px;
 }
