--- a/public/sass/header.css
+++ b/public/sass/header.css
@@ -12,6 +12,7 @@
 .dropdown {
   position: relative;
   display: inline-block;
+  height: 57px;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -23,8 +24,9 @@
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  left: -115px;
-  top: 8px;
+  left: -62px;
+  top: 18px;
+  width: 127px;
 }
 
 /* Links inside the dropdown */
