--- a/public/sass/header.scss
+++ b/public/sass/header.scss
@@ -26,24 +26,18 @@
     -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    left: -115px;
+    left: -90px;
     top:8px;
+    width: 127px;
+    
     
 }
   
   /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
+
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: $color1;
-        max-width: 100%;
-        }
-  
+
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
     display: block;
@@ -53,3 +47,32 @@
   .dropdown:hover .dropbtn {
     background-color: #3e8e41;
   }
+
+  @import url('https://fonts.googleapis.com/css?family=Barlow:800&display=swap');
+
+* {
+  box-sizing: border-box;
+  &::before, &::after {
+    box-sizing: border-box;
+  }
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  overflow: hidden;
+background: linear-gradient(to right, midnightblue, midnightblue 50%, royalblue 50%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+background-size: 200% 100%;
+background-position: 100%;
+transition: background-position 275ms ease;
+text-decoration: none; // text decorations are clipped in WebKit browsers
+
+  &:hover {
+    background-position: 0 100%;
+  }
+}
