--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,6 +228,7 @@ a {
 .__item .box2 img {
     width: 468px;
     height: 289px;
+    border-radius: 5px;
 }
 
 .__item .box3 {
@@ -312,4 +313,79 @@ span.product-name {
 .__item:hover img {
   transform: scale(1.3);
   transform-origin: 50% 50%;
+}
+
+.sales1 {
+    /*border: 1px solid red;*/
+    width: 30%;
+    padding: 5px;
+    position: absolute;
+    top: 25%;
+    left: 16%;
+}
+
+.sales2 {
+    color: white;
+    font-weight: bold;
+    font-size: 52px;
+}
+
+.sales3 {
+    color: #b89352;
+    font-size: 94px;
+    font-weight: bold;
+}
+
+.sales4 {
+    color: #d2d1d1;
+    font-size: 28px;
+    margin-top: 14px;
+}
+
+.sales5 {
+    margin-top: 30px;
+}
+
+.bttn1 {
+    padding: 17px;
+    width: 24%;
+    font-size: 17px;
+    border-radius: 5px;
+    border: 2px solid #c4a265;
+    background-color: #c4a265;
+    color: white;
+    font-weight: 600;
+}
+
+.bttn1:hover {
+    background-color: #b89352;
+    border: 2px solid #b89352;
+}
+
+.bttn2 {
+    padding: 17px;
+    width: 30%;
+    font-size: 17px;
+    font-weight: 600;
+    border-radius: 5px;
+    background-color: transparent;
+    color: white;
+    border: none;
+    border: 2px solid #e7e7e7;
+}
+
+.bttn2:hover {
+    background-color: #b89352;
+    border: none;
+}
+
+.trans {
+    /*min-height: 800px;
+    width: 1903px;
+    position: relative;
+    left: -3806px;
+    top: 0px;
+    z-index: 998;
+    opacity: 0;
+    transition: opacity 1000ms ease 0s;*/
 }
