--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -10,23 +10,36 @@
   border-bottom: 5px solid #ffffffbf;
   padding-bottom: 20px;
   padding-top: 20px;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .container {
   position: relative;
-  text-align: center;
-  color: #ffffffbf;
+  /*text-align: center;*/
+  /*color: #ffffffbf;*/
 }
 
-.f-icon img {
+.f-icon img{
   width: 75px;
-  display: inline-block;
+  margin: 27px;
 }
-
+.f-icon {
+  display: grid;
+  height: 172px;
+  margin: 13px 34px;
+  width: 153px;
+}
+.f-icon span {
+  font-family: Blatant, sans-serif;
+}
+.page-wrapper {
+    display: flex;
+    margin: 0 28%;
+}
 img.icon1 {
-  margin-left: 220px;
+  /*margin-left: 220px;
   position: relative;
   top: 70px;
-  left: -108px;
+  left: -108px;*/
 }
 /*# sourceMappingURL=bodystyle.css.map */
