--- a/public/sass/bodystyle.scss
+++ b/public/sass/bodystyle.scss
@@ -1,30 +1,63 @@
 .centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    font-size: 60px;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    font-family: "Times New Roman", Times, serif;
-    
-    border-top: 5px solid #ffffffbf;
-    border-bottom: 5px solid #ffffffbf;
-    padding-bottom: 20px;
-    padding-top: 20px;
-  }
-
-  .container {
-    position: relative;
-    text-align: center;
-    color: #ffffffbf;
-  }
-  .f-icon  {
-    width: 75px;
-    display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 60px;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-family: "Times New Roman", Times, serif;
+  border-top: 5px solid #ffffffbf;
+  border-bottom: 5px solid #ffffffbf;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  color: rgba(255, 255, 255, 0.8);
 }
-.icon1 {
-    margin-left: 220px;
+
+.container {
+  position: relative;
+  /*text-align: center;*/
+  /*color: #ffffffbf;*/
+}
+
+.f-icon img{
+  width: 75px;
+  margin: 50px;
+}
+.f-icon {
+  display: grid;
+    height: 172px;
+    margin: 13px 54px;
+    width: 250px;
     position: relative;
-    top: 70px;
-    left: -108px;
+    left: -295px;
+  
+}
+.f-icon span {
+  font-family: Blatant, sans-serif;
+}
+.page-wrapper {
+    display: flex;
+    margin: 0 28%;
+}
+
+.buttoncat {
+  background-color: #b28b19;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    width: 210px;
+    position: relative;
+    left: -6px;
+  
+}
+
+.buttoncat:hover {
+
+  background-color:#b26419;
 }
