--- a/public/sass/header.css
+++ b/public/sass/header.css
@@ -35,6 +35,7 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  width: 100px;
 }
 
 /* Change color of dropdown links on hover */
