--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -31,7 +31,7 @@
   margin: 13px 54px;
   width: 250px;
   position: relative;
-  left: -295px;
+  /*left: -295px;*/
 }
 
 .f-icon span {
@@ -43,7 +43,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 28%;
+  margin: 0 12%;
 }
 
 .buttoncat {
