--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,19 @@
 html, body {
-  padding: 0;
   max-width: 1920px;
+  padding: 0;
+  margin: 0;
 }
 
 * {
-	font-family: Lucida Console;
-	padding: none;
+	font-family: "Blatant", sans-serif;
+
 }
 a {
     text-decoration: none;
 }
 .headmenu {
-	border: 1px solid black;
-	padding: 24px;
+	/*border: 1px solid black;*/
+	padding: 34px;
 	background-color: #2a2c2f;
 }
 
@@ -106,7 +107,23 @@ a {
   display: block;
 }
 
+.dropdown:hover .des3 {
+  color: #C4A265;
+}
+
 .dropdown:hover .des4 {
+  color: #C4A265;
+}
+
+.dropdown:hover .des5 {
+  color: #C4A265;
+}
+
+.dropdown:hover .des6 {
+  color: #C4A265;
+}
+
+.dropdown:hover .des7 {
   color: #C4A265;
 }
 
@@ -129,7 +146,7 @@ a {
 }
 
 .headmenu .inputs .btn-search {
-    padding: 24px;
+    padding: 22px;
     margin-left: -8px;
     background-color: #c4a265;
     border: none;
@@ -263,12 +280,14 @@ a {
 /* Slideshow container */
 #slide-container {
  position: relative;
+ overflow: hidden;
  /*max-width: 800px*/; /* responsiveness */
 }
 
 .slide-image {
     width: 100%;
-    height: 870px;
+    height: 780px;
+    object-fit: cover;
 }
 .item-details {
     margin: 12px 0;
@@ -401,19 +420,10 @@ span.product-title {
 
 .bttn2:hover {
     background-color: #b89352;
-    border: none;
+    border: 2px solid #b89352;
 }
 
-.trans {
-    /*min-height: 800px;
-    width: 1903px;
-    position: relative;
-    left: -3806px;
-    top: 0px;
-    z-index: 998;
-    opacity: 0;
-    transition: opacity 1000ms ease 0s;*/
-}
+
 .select-more {
     margin: 32px 0px;
     font-family: Blatant , sans-serif;
@@ -639,4 +649,142 @@ span.sp {
 .tweets {
     height: 17px;
     padding-right: 7px;
+}
+
+
+
+
+
+
+
+
+
+
+.hero-text h2 {
+  margin-bottom: 50px;
+}
+
+.hero-text .hero {
+  position: relative;
+}
+
+.hero-text .hero .hero-slide a:hover span {
+  color: #033a71;
+}
+
+.hero .hero-slide img {
+  width: 100%;
+  height: 870px;
+  object-fit: cover;
+  object-position: top center;
+}
+
+.hero .hero-slide .header-content {
+  top: 20%;
+  margin-left: 8rem;
+  max-width: 550px;
+  width: 100%;
+  padding: 2rem;
+}
+
+.slide-content {
+  padding: 10px 20px 10px 0;
+}
+
+.slide-content .h1 {
+  font-size: 62px;
+}
+
+.btn-primary {
+  background-color: #5302FE;
+  border: #111;
+  border-radius: 0;
+}
+
+/** Text Animation **/
+
+@-webkit-keyframes fadeInUpSD {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100px);
+    transform: translateY(100px);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInUpSD {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100px);
+    transform: translateY(100px);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+.fadeInUpSD {
+  -webkit-animation-name: fadeInUpSD;
+  animation-name: fadeInUpSD;
+}
+
+.slick-active .slide-content {
+  animation-name: fadeInUpSD;
+  animation-duration: 1s;
+  opacity: 1;
+  width: 100%;
+  padding: 10px 20px 30px 0;
+}
+
+/* Text Animation End **/
+
+.slick-dots {
+  position: absolute;
+  bottom: 10px;
+  display: block;
+  width: 100%;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.slick-active button {
+  background: #d60e96;
+}
+
+.slick-dots li button {
+  font-size: 0;
+  line-height: 0;
+  /*display: block;*/
+  /*width: 20px;
+  height: 20px;*/
+  padding: 5px;
+  cursor: pointer;
+  border-radius: 50%;
+  border: 0;
+  outline: none;
+}
+
+.slick-dots li button::before {
+  font-size: 18px;
+  color: #fff;
+  opacity: 1;
 }
