--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -1,4 +1,4 @@
-.copyright{
+/*.copyright{
     margin-top: -12px;
 	position: relative;
 	display: block;
@@ -7,7 +7,7 @@
 	padding: 30px 0;
     z-index: 1;
     color:white;
-}
+}*/
 
 .copyright .company-name{
 	font-size: 16px;
