--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -268,7 +268,8 @@
 	    padding: 31px 3px;
 	}
 	.__item {
-    	width: 357px;
+    	/*width: 357px;*/
+	    width: 555px;
 	}
 	.items-container {
 		width: 88%;
@@ -313,6 +314,26 @@
 	    overflow: hidden;
 	    margin: 0 -36px;
 	    height: 662px;
+	}
+	.item-image {
+    	height: 281px;
+	}
+	.container .sub-container .box img {
+    	width: 100%;
+    	height: 250px;
+	}
+	.__item .box2 {
+	    height: 375px;
+	}
+	.__item .box2 img {
+    	height: 100%;
+	}
+	.container .sub-container2 {
+	    width: 100%;
+	    margin-top: 27%;
+	    background-color: #f6f4f2;
+	    max-width: 1920px;
+	    height: 2484px;
 	}
 	/*.container .sub-container .box {
 	    width: 180%!important;
