--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,16 +188,17 @@ a {
     font-size: 41px;
     font-weight: bold;
     margin-top: 66px;
+    text-align: center;
 }
 .container .sub-container{
     /*position: relative;*/
 }
 
 .container .sub-container .box {
-    width: 80%!important;
+    width: 100%!important;
     height: 250px;
-    float: left;
-    /*margin-left: 73px;*/
+    /*float: left;*/
+    margin-left: 0;
     margin-top: 75px;
     position: relative;
 }
@@ -446,10 +447,10 @@ span.product-title {
 }
 .cart-icon {
     position: absolute;
-    width: 66px;
+    width: 50px;
     height: 26px;
     top: 10px;
-    margin: 45px 99px;
+    margin: 19% 42%;
     display: none;
 }
 .cart-icon img {
