--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -103,11 +103,11 @@ div#my-searches {
 	    margin-top: 29px;
 	}
 	.container .sub-container {
-		height:auto;
 		min-height:30px;
 		/*height: 161px;*/
-		/*height: auto;*/
-		height: 400px;
+		height: auto;
+	    /*height: 900px;*/
+	    position: relative;
 	}
 	/*-------------------------------------*/
 	.__item {
@@ -319,14 +319,16 @@ div#my-searches {
 	    width: 555px;
 	}
 	.items-container {
-		width: 88%;
+	    width: 100%;
 		margin: 58px auto;
+		height: auto;
+	    justify-content: center;
 	}
 	.slide-image {
     	height: 1033px;
 	}
 	.slider-conts {
-    	height: 1088px;
+    	height: 1033px;
 	}
 	.bttn2 {
 		margin-left: 5px;
@@ -357,17 +359,24 @@ div#my-searches {
 	  display: block;
 	}
 	.items.slider.slick-initialized.slick-slider {
-	    width: 100%;
+	    /*width: 80%;*/
+        width: 100%;
 	    overflow: hidden;
-	    margin: 0 -36px;
-	    height: 662px;
+	    /*margin: 0 -36px;*/
+        margin: 0 0px;
+	    /*height: 662px;*/
+        height: auto;
 	}
 	.item-image {
-    	height: 281px;
+    	/*height: 281px; 01 09 21*/
+	    height: auto; 
+	}
+	.container .sub-container .box {
+ 		height: auto; 
 	}
 	.container .sub-container .box img {
-    	width: 100%;
-    	height: 250px;
+        width: 600px;
+    	height: 450px;
 	}
 	.__item .box2 {
 	    height: 375px;
@@ -377,10 +386,11 @@ div#my-searches {
 	}
 	.container .sub-container2 {
 	    width: 100%;
-	    margin-top: 27%;
+	    /*margin-top: 27%;*/
 	    background-color: #f6f4f2;
 	    max-width: 1920px;
 	    height: 2484px;
+        height: auto;
 	}
 	div#myDropdown {
 	    position: absolute;
@@ -401,6 +411,38 @@ div#my-searches {
 	}
 	#myDropdown {
 		z-index: 99999;
+	}
+	.slick-list {
+    	margin: 0 -50px;
+	}
+	.page-wrapper {
+  		position: relative;
+	    flex-wrap: wrap;
+        height: auto;
+        justify-content: center;
+	}
+	.f-icon {
+        height: auto;
+	    width: 458px;
+        text-align: center;
+	}
+	a.icon1 {
+		display: block;
+	}
+	.f-icon img {
+    	width: 108px;
+	}
+	.sub-container4 {
+    	height: auto;
+	    padding: 65px 0;
+	}
+	.qual-icon-cont p,span{
+        font-size: 21px;
+    	width: auto;
+	}
+	button.buttoncat {
+   	    font-size: 21px;
+    	width: 63%;
 	}
 	/*.container .sub-container .box {
 	    width: 180%!important;
@@ -430,7 +472,7 @@ div#my-searches {
 	}
 	.bttn1 {
 		padding: 18px;
-	    width: 23%;
+        width: 31%;
 	    font-size: 24px;
 	}
 	.bttn2 {
@@ -442,8 +484,7 @@ div#my-searches {
 	    height: 996px;
 	}
 	.items.slider.slick-initialized.slick-slider {
-		width: 79%;
-		height: 492px;
+	    width: 100%;
 	}
 	span.product-name {
 		font-size: 26px;
@@ -451,14 +492,9 @@ div#my-searches {
 	.prices {
 		font-size: 26px;
 	}
-	.container .sub-container {
-		height: 300px;
-	}
-	.items-container {
-		width: 89%;
-	}
 	.__item {
-		width: 361px;
+		/*width: 361px;*/
+	    width: 500px;
 	}
 
 }
@@ -477,18 +513,17 @@ div#my-searches {
 		font-size: 20px;
 	}
 	.container .sub-container2 {
-		height: 1477px;
+	    height: auto;
 	}
 	.items-container {
-		width: 90%;
+		width: 100%;
 	}
 	.__item {
-		width: 366px;
+	    width: 619px;
 	}
 	.items.slider.slick-initialized.slick-slider {
-		width: 81%;
-	    margin: 0 102px;
-	    height: 377px;
+   		width: 100%;
+    	height: auto;
 	}
 	.slide-image {
     	height: 797px;
@@ -496,7 +531,6 @@ div#my-searches {
 	.container .sub-container {
 	    height: auto;
 	    min-height: 30px;
-	    height: 125px!important;
 	}
 	span.product-name {
 		font-size: 27px;
@@ -516,21 +550,21 @@ div#my-searches {
 	}
 }
 @media (max-width: 360px) {
-	.items.slider.slick-initialized.slick-slider {
-	    width: 79%;
-	    margin: 0 142px;
-	    height: 454px;
+	.slick-list.draggable {
+    	width: 100%;
 	}
 	.container .sub-container .box {
 		margin-top: 45px;
 	}
 	.container .sub-container .box img {
 	    width: 100%;
-	    height: 228px;
+	    /*height: 228px;*/
+        height: auto;
 	    object-fit: cover;
 	}
 	.container .sub-container {
-		height: 186px!important;
+	    height: auto;
+        padding: 35px 0;
 	}
 	.container .sub-container2 {
 		height: 1721px;
@@ -631,7 +665,7 @@ div#my-searches {
 	    height: 818px;
 	}
 	.slide-image {
-	    height: 1032px;
+        height: 1179px;
 	}
 	.slider-conts {
 	    height: 1145px;
@@ -660,6 +694,16 @@ div#my-searches {
 		font-size: 60px;
 	}
 	span.product-name {
-	    font-size: 37px;
+	    font-size: 60px;
+    	font-weight: 700;
 	}
+	.slider-conts {
+	    height: 1179px;
+	}
+	#slide-container {
+    	height: auto;
+	}
+	/*.sales1 {
+		top: 0!important;
+	}*/
 }
